oppdatert sjekk for endring av kontakt informasjon